adding geolocation service